<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/menu_settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exercicio.select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:text="@string/exercicio"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/exercicioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp">

            <RadioButton
                android:id="@+id/caminhada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exerCaminhada" />

            <RadioButton
                android:id="@+id/corrida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exerCorrida" />

            <RadioButton
                android:id="@+id/pedalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exerPedalada" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:text="@string/u.velo"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/veloGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <RadioButton
                android:id="@+id/km_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/u.km" />

            <RadioButton
                android:id="@+id/m_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/u.ms" />
        </RadioGroup>

        <TextView
            android:id="@+id/orientacao.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:text="@string/orientacao.name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/orientGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp">

            <RadioButton
                android:id="@+id/north_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/north" />

            <RadioButton
                android:id="@+id/course_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course" />
        </RadioGroup>

        <TextView
            android:id="@+id/t.mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="12dp"
            android:text="@string/t.mapa"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/mapaGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/t.vetorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/vetorial" />

            <RadioButton
                android:id="@+id/t.satelite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/satelite" />
        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/salvar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/voltar" />

    </LinearLayout>

</FrameLayout>
</androidx.core.widget.NestedScrollView>