<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frame_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/green"
android:visibility="visible"
tools:context=".Fragments.HIstoric">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="400dp"
        android:layout_height="438dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:layout_below="@+id/google_map">

    <View
        android:id="@+id/containerHistoric"
        style="@style/ContainerComponents"
        android:layout_width="414dp"
        android:layout_height="217dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <EditText
        android:id="@+id/inputSpeed_historic"
        style="@style/Edit_Text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:hint="@string/inputSpeed"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/containerHistoric"
        app:layout_constraintTop_toTopOf="@id/containerHistoric" />

    <TextView
        android:id="@+id/speed_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:padding="2dp"
        android:text="@string/inputSpeed_historic"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/containerHistoric"
        app:layout_constraintTop_toBottomOf="@id/inputSpeed_historic" />

    <Chronometer
        android:id="@+id/chronometer_historic"
        style="@style/Edit_Text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:inputType="time"
        android:padding="10dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/inputSpeed_historic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:padding="2dp"
        android:text="@string/chronometer"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/inputSpeed_historic"
        app:layout_constraintTop_toBottomOf="@id/chronometer_historic" />


    <EditText
        android:id="@+id/inputDistance_historic"
        style="@style/Edit_Text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:hint="@string/inputDistance_historic"
        android:inputType="number"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/chronometer_historic"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/distance_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:padding="2dp"
        android:text="@string/inputDistance_historic"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/chronometer_historic"
        app:layout_constraintTop_toBottomOf="@id/inputDistance_historic" />

    <TextView
        android:id="@+id/title_historic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_historic"
        android:textColor="#03A9F4"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="146dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>