<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:visibility="visible"
    tools:context=".Fragments.MapsFragment">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="405dp"
        android:layout_height="390dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_below="@+id/google_map">

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/inputSpeed"
            style="@style/Edit_Text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:hint="@string/inputSpeed"
            android:inputType="number"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/blue"
            android:text="@string/inputSpeed"
            android:layout_marginStart="45dp"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/inputSpeed"/>

        <Chronometer
            android:id="@+id/chronometer"
            style="@style/Edit_Text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:inputType="time"
            android:padding="10dp"
            android:text="00:00"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/inputSpeed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:padding="2dp"
            android:text="@string/chronometer"
            android:textColor="@color/blue"
            app:layout_constraintStart_toEndOf="@id/inputSpeed"
            app:layout_constraintTop_toBottomOf="@id/chronometer" />


        <EditText
            android:id="@+id/inputDistance"
            style="@style/Edit_Text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:hint="@string/inputDistance"
            android:inputType="number"
            android:padding="10dp"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@id/chronometer"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/blue"
            android:text="@string/inputDistance"
            android:layout_marginStart="45dp"
            app:layout_constraintStart_toEndOf="@id/chronometer"
            app:layout_constraintTop_toBottomOf="@id/inputDistance"/>

        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/inputSpeed" />

        <ImageView
            android:id="@+id/btn_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_clear"
            app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
            app:layout_constraintStart_toEndOf="@id/btn_pause"
            app:layout_constraintTop_toBottomOf="@id/inputDistance"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/btn_pause"
            android:layout_width="40dp"
            android:layout_height="41dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_pause_circle"
            app:layout_constraintStart_toEndOf="@id/btn_play"
            app:layout_constraintTop_toBottomOf="@id/chronometer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSalvar"
            style="@style/Button"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_marginTop="18dp"
            android:padding="5dp"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_pause" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>